python_eks-main/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-web
  namespace: python-web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
    - host: dsi-dev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: python-web
                port:
                  number: 80
